@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
+
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
